# Phase_portrait_generator

./: .gitignore  CMakeLists.txt  README.md  config.h  main  main.cpp
assests/: font.h
include/: config.h
src/control/: CMakeLists.txt  control.cpp
src/control/include/: control.h
src/cordinats/: CMakeLists.txt  cordinats.cpp
src/cordinats/include/: cordinats.h
src/input_eq/: CMakeLists.txt  input_eq.cpp
src/input_eq/include/: input_eq.h
src/numeric/: CMakeLists.txt  numeric.cpp
src/numeric/include/: numeric.h
src/parser/: CMakeLists.txt  parsing.cpp
src/parser/include/: exprtk.hpp  parsing.h
src/rendering/: CMakeLists.txt  rendering.cpp
src/rendering/include/: rendering.h
